# hse-pe-attendance

./: .env.local  Dockerfile  README.md  app.py  docker-compose.dev.yaml  enums.py  main.py  migrations.dockerfile  pyproject.toml  settings.py  templates.py
.github/workflows/: main.yaml
admin/: fields.py  table.py  widgets.py
alembic/: env.py
alembic/versions/: 080613d0df32_added_users.py  24ba5b52225b_added_attendances_students_and_groups_.py  356607710834_removed_teachers_and_students_id.py  (+6 more)
attendance_requirements/: controllers.py  database.py  forms.py  models.py  router.py
attendances/: controllers.py  database.py  forms.py  models.py  router.py  tables.py
database/: __init__.py  base.py  deps.py  session.py
deploy/: .env.j2  backend.env.j2  deploy-infra.yaml  deploy.yaml  docker-compose.infra.yaml  docker-compose.yaml  postgres.env.j2
extra_attendances/: controllers.py  database.py  forms.py  models.py  router.py  tables.py
groups/: admin.py  controllers.py  database.py  forms.py  models.py  router.py  tables.py
schedule/: admin.py  controllers.py  database.py  forms.py  models.py  router.py
sections/: admin.py  controllers.py  database.py  forms.py  models.py  tables.py
students/: admin.py  controllers.py  database.py  dtos.py  export.py  forms.py  models.py  router.py  tables.py
teachers/: admin.py  controllers.py  database.py  forms.py  models.py  router.py  tables.py
templates/: _macros.html  _table.html  index.html  layout.html
users/: controllers.py  database.py  deps.py  forms.py  models.py  passwords.py  router.py  session.py
(+24 files in other folders)
