[tool.poetry]
name = "hse-pe-attendance"
version = "0.1.0"
description = ""
authors = ["7lli8 <bachurina.yulia1337@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.40"
pydantic-settings = "^2.8.1"
psycopg2 = "^2.9.10"
alembic = "^1.15.2"
jinja2 = "^3.1.6"
alembic-postgresql-enum = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
